--- a/package.xml
+++ b/package.xml
@@ -16,10 +16,10 @@
     <email>pdelewski@example.com</email>
     <active>yes</active>
   </lead>
-  <date>2023-06-14</date>
-  <time>08:44:49</time>
+  <date>2023-09-04</date>
+  <time>23:35:51</time>
   <version>
-    <release>1.0.0beta6</release>
+    <release>1.0.0beta7</release>
     <api>1.0</api>
   </version>
   <stability>
@@ -27,9 +27,21 @@
     <api>stable</api>
   </stability>
   <license uri="https://opensource.org/license/apache-2-0/" filesource="LICENSE">Apache 2.0</license>
-  <notes>opentelemetry 1.0.0beta6
-* handle UnwindExit (#62)
-</notes>
+  <notes>opentelemetry 1.0.0beta7
+    * adding more tests (#82)
+    * disabling expanding args for internal functions (#84)
+    * check for invalid hook function signatures (#79)
+    * adding checks for conflicting extensions (#83)
+    * adding notes and minor code improvements for issue 68 (#75)
+    * fixing crash + docs (#76)
+    * fixing clang-format install (#78)
+    * adding valgrind (#73)
+    * fixing segfault when returning params from pre callback (#72)
+    * adding failing tests for pre-hook params (#71)
+    * moving docs back to root (#70)
+    * add failing test for expand params with post callback (#69)
+    * moving extension to subdirectory (#65)
+  </notes>
   <contents>
     <dir baseinstalldir="/" name="/">
       <file baseinstalldir="/" name=".clang-format" role="src"/>
@@ -107,22 +119,22 @@
       <license>Apache 2.0</license>
       <notes>opentelemetry 1.0.0beta3
 
-                * rename extension from otel_instrumentation to opentelemetry (#49)
-                * display extension version in phpinfo (#48)
-                * Fix #46 add doc, license and tests to pecl package (#47)
-                * changes to allow build/upload to pecl (#44)
-                * update package.xml and docs in preparation for pecl release (#43)
-                * store scope in the context (#42)
-                * moving bin directory to contrib (#39)
-                * fixing script names (#38)
-                * get list of auto packages through packagist api (#37)
-                * adding new symfony and laravel auto instrumentation packages (#36)
-                * execute composer require in non-interactive mode (#35)
-                * deny plugins for php-http/discovery by default (#34)
-                * windows is not supported yet due to configure script code generation error (#33)
-                * install and setup auto-instrumentation with one command (#29)
-                * docs: update/sync(opentelemetry.io) installation description (#27)
-            </notes>
+        * rename extension from otel_instrumentation to opentelemetry (#49)
+        * display extension version in phpinfo (#48)
+        * Fix #46 add doc, license and tests to pecl package (#47)
+        * changes to allow build/upload to pecl (#44)
+        * update package.xml and docs in preparation for pecl release (#43)
+        * store scope in the context (#42)
+        * moving bin directory to contrib (#39)
+        * fixing script names (#38)
+        * get list of auto packages through packagist api (#37)
+        * adding new symfony and laravel auto instrumentation packages (#36)
+        * execute composer require in non-interactive mode (#35)
+        * deny plugins for php-http/discovery by default (#34)
+        * windows is not supported yet due to configure script code generation error (#33)
+        * install and setup auto-instrumentation with one command (#29)
+        * docs: update/sync(opentelemetry.io) installation description (#27)
+      </notes>
     </release>
     <release>
       <date>2023-04-19</date>
@@ -139,7 +151,7 @@
       <notes>opentelemetry 1.0.0beta4
         * Consistent source code formatting  (#52)
         * segfault during exception in post hook (#51)
-    </notes>
+      </notes>
     </release>
     <release>
       <date>2023-05-10</date>
@@ -154,9 +166,25 @@
       </stability>
       <license>Apache 2.0</license>
       <notes>opentelemetry 1.0.0beta5
-* calling die or exit directly lead to segfault (#55)
-* adding phpdoc to stubs (#54)
-</notes>
+        * calling die or exit directly lead to segfault (#55)
+        * adding phpdoc to stubs (#54)
+      </notes>
+    </release>
+    <release>
+      <date>2023-06-14</date>
+      <time>08:44:49</time>
+      <version>
+        <release>1.0.0beta6</release>
+        <api>1.0</api>
+      </version>
+      <stability>
+        <release>beta</release>
+        <api>stable</api>
+      </stability>
+      <license>Apache 2.0</license>
+      <notes>opentelemetry 1.0.0beta6
+        * handle UnwindExit (#62)
+      </notes>
     </release>
   </changelog>
 </package>
