--- a/package.xml
+++ b/package.xml
@@ -77,6 +77,7 @@
         <file name="return_params.phpt" role="test"/>
         <file name="return_params_internal.phpt" role="test"/>
         <file name="return_reduced_params.phpt" role="test"/>
+        <file name="static_method.phpt" role="test"/>
         <file name="unwind_exit.phpt" role="test"/>
       </dir>
     </dir>
