--- a/package.xml
+++ b/package.xml
@@ -16,10 +16,10 @@
     <email>pdelewski@example.com</email>
     <active>yes</active>
   </lead>
-  <date>2023-10-17</date>
-  <time>03:23:33</time>
+  <date>2023-10-19</date>
+  <time>21:45:44</time>
   <version>
-    <release>1.0.0RC2</release>
+    <release>1.0.0RC3</release>
     <api>1.0</api>
   </version>
   <stability>
@@ -27,13 +27,10 @@
     <api>stable</api>
   </stability>
   <license uri="https://opensource.org/license/apache-2-0/" filesource="LICENSE">Apache 2.0</license>
-  <notes>opentelemetry 1.0.0RC2
-    * documentation updates (#100)
-    * Change segfault method! (#97)
-    * adding windows build action (#93)
-    * adding test and doc for hooking static method (#94)
-    * Update opentelemetry.stub.php (#92)
-    * For WINDOWS build! (#88)
+  <notes>opentelemetry 1.0.0RC3
+    * re-enable blackfire (#103)
+    * Check observer_class_lookup for NULL in observer callback (#102)
+    * gitsplit extension dir (#98)
   </notes>
   <contents>
     <dir baseinstalldir="/" name="/">
@@ -237,6 +234,27 @@
       </stability>
       <license>Apache 2.0</license>
       <notes>opentelemetry 1.0.0RC1
+      </notes>
+    </release>
+    <release>
+      <date>2023-10-17</date>
+      <time>03:23:33</time>
+      <version>
+        <release>1.0.0RC2</release>
+        <api>1.0</api>
+      </version>
+      <stability>
+        <release>beta</release>
+        <api>stable</api>
+      </stability>
+      <license>Apache 2.0</license>
+      <notes>opentelemetry 1.0.0RC2
+        * documentation updates (#100)
+        * Change segfault method! (#97)
+        * adding windows build action (#93)
+        * adding test and doc for hooking static method (#94)
+        * Update opentelemetry.stub.php (#92)
+        * For WINDOWS build! (#88)
       </notes>
     </release>
   </changelog>
