--- a/package.xml
+++ b/package.xml
@@ -16,21 +16,18 @@
     <email>pdelewski@example.com</email>
     <active>yes</active>
   </lead>
-  <date>2023-10-19</date>
-  <time>21:45:44</time>
+  <date>2023-10-25</date>
+  <time>12:19:13</time>
   <version>
-    <release>1.0.0RC3</release>
+    <release>1.0.0</release>
     <api>1.0</api>
   </version>
   <stability>
-    <release>beta</release>
+    <release>stable</release>
     <api>stable</api>
   </stability>
   <license uri="https://opensource.org/license/apache-2-0/" filesource="LICENSE">Apache 2.0</license>
-  <notes>opentelemetry 1.0.0RC3
-    * re-enable blackfire (#103)
-    * Check observer_class_lookup for NULL in observer callback (#102)
-    * gitsplit extension dir (#98)
+  <notes>opentelemetry 1.0.0
   </notes>
   <contents>
     <dir baseinstalldir="/" name="/">
@@ -255,6 +252,24 @@
         * adding test and doc for hooking static method (#94)
         * Update opentelemetry.stub.php (#92)
         * For WINDOWS build! (#88)
+      </notes>
+    </release>
+    <release>
+      <date>2023-10-19</date>
+      <time>21:45:44</time>
+      <version>
+        <release>1.0.0RC3</release>
+        <api>1.0</api>
+      </version>
+      <stability>
+        <release>beta</release>
+        <api>stable</api>
+      </stability>
+      <license>Apache 2.0</license>
+      <notes>opentelemetry 1.0.0RC3
+        * re-enable blackfire (#103)
+        * Check observer_class_lookup for NULL in observer callback (#102)
+        * gitsplit extension dir (#98)
       </notes>
     </release>
   </changelog>
