adding test for post hook type error (#119)
* adding test for post hook type error
if an invalid typehint is provided for first param of post callback, this would previously cause a hang.
fixed by #118, this test confirms the fix works in this scenario.

* improve test, add to package.xml

* remove try/catch

--- a/package.xml
+++ b/package.xml
@@ -72,6 +72,7 @@
         <file name="multiple_hooks_modify_returnvalue.phpt" role="test"/>
         <file name="post_hook_return_ignored_without_type.phpt" role="test"/>
         <file name="post_hook_throws_exception.phpt" role="test"/>
+        <file name="post_hook_type_error.phpt" role="test"/>
         <file name="reimplemented_interface.phpt" role="test"/>
         <file name="return_expanded_params.phpt" role="test"/>
         <file name="return_expanded_params_internal.phpt" role="test"/>
