Support modifying named params (#121)
* Support modifying named params

* Removed use of function not available in all PHP versions

--- a/package.xml
+++ b/package.xml
@@ -67,6 +67,9 @@
         <file name="invalid_pre_callback_signature.phpt" role="test"/>
         <file name="invalid_pre_callback_signature_with_function.phpt" role="test"/>
         <file name="modify_named_params.phpt" role="test"/>
+        <file name="modify_named_params_internal.phpt" role="test"/>
+        <file name="modify_named_params_invalid.phpt" role="test"/>
+        <file name="modify_named_params_twice.phpt" role="test"/>
         <file name="modify_params.phpt" role="test"/>
         <file name="multiple_hooks_modify_params.phpt" role="test"/>
         <file name="multiple_hooks_modify_returnvalue.phpt" role="test"/>
