--- a/package.xml
+++ b/package.xml
@@ -16,18 +16,31 @@
     <email>pdelewski@example.com</email>
     <active>yes</active>
   </lead>
-  <date>2023-10-25</date>
-  <time>12:19:13</time>
+  <date>2024-01-24</date>
+  <time>23:26:21</time>
   <version>
-    <release>1.0.0</release>
+    <release>1.0.1beta1</release>
     <api>1.0</api>
   </version>
   <stability>
-    <release>stable</release>
+    <release>beta</release>
     <api>stable</api>
   </stability>
   <license uri="https://opensource.org/license/apache-2-0/" filesource="LICENSE">Apache 2.0</license>
-  <notes>opentelemetry 1.0.0
+  <notes>opentelemetry 1.0.1beta1
+    * Fix modifying extra parameters, limit parameter expansion (#120)
+    * Fix crash by unregistering INI in MSHUTDOWN instead of RSHUTDOWN (#122)
+    * Support modifying named params (#121)
+    * adding test for post hook type error (#119)
+    * Isolate exception state for hooks (#118)
+    * Update README.md to point issues to the main repository (#117)
+    * Include PHP 8.3 in build matrix (#112)
+    * Build images whenever the actions definition changes (#115)
+    * adding php 8.3 dev image (#113)
+    * document SourceGuardian incompatibility (#111)
+    * create draft release on tag, publish windows and pecl builds (#109)
+    * adding test for post hooks after die/exit (#110)
+    * add pear to build (#108)
   </notes>
   <contents>
     <dir baseinstalldir="/" name="/">
@@ -279,6 +292,21 @@
         * re-enable blackfire (#103)
         * Check observer_class_lookup for NULL in observer callback (#102)
         * gitsplit extension dir (#98)
+      </notes>
+    </release>
+    <release>
+      <date>2023-10-25</date>
+      <time>12:19:13</time>
+      <version>
+        <release>1.0.0</release>
+        <api>1.0</api>
+      </version>
+      <stability>
+        <release>stable</release>
+        <api>stable</api>
+      </stability>
+      <license>Apache 2.0</license>
+      <notes>opentelemetry 1.0.0
       </notes>
     </release>
   </changelog>
