Fix exception raised by `php_error_docref` that hangs the process in hook (#127)
* Use E_CORE_WARNING for logging

* Add test, fix other tests

---------

Co-authored-by: Brett McBride <brett.a.mcbride@gmail.com>

--- a/package.xml
+++ b/package.xml
@@ -77,6 +77,7 @@
         <file name="function_internal.phpt" role="test"/>
         <file name="hooks_throw_exception.phpt" role="test"/>
         <file name="hooks_throw_exception_for_failed_call.phpt" role="test"/>
+        <file name="hooks_throw_exception_error_handler.phpt" role="test"/>
         <file name="ini_set.phpt" role="test"/>
         <file name="invalid_post_callback_signature.phpt" role="test"/>
         <file name="invalid_pre_callback_signature.phpt" role="test"/>
