--- a/package.xml
+++ b/package.xml
@@ -16,10 +16,10 @@
     <email>pdelewski@example.com</email>
     <active>yes</active>
   </lead>
-  <date>2025-05-08</date>
-  <time>05:19:59</time>
+  <date>2025-07-08</date>
+  <time>00:05:00</time>
   <version>
-    <release>1.1.3</release>
+    <release>1.2.0</release>
     <api>1.0</api>
   </version>
   <stability>
@@ -27,7 +27,7 @@
     <api>stable</api>
   </stability>
   <license uri="https://opensource.org/license/apache-2-0/" filesource="LICENSE">Apache 2.0</license>
-  <notes>See https://github.com/open-telemetry/opentelemetry-php-instrumentation/releases/tag/1.1.3</notes>
+  <notes>See https://github.com/open-telemetry/opentelemetry-php-instrumentation/releases/tag/1.2.0</notes>
   <contents>
     <dir baseinstalldir="/" name="/">
       <file baseinstalldir="/" name=".clang-format" role="src"/>
@@ -66,8 +66,8 @@
         <file name="function_first_class_callable.phpt" role="test"/>
         <file name="function_internal.phpt" role="test"/>
         <file name="hooks_throw_exception.phpt" role="test"/>
-        <file name="hooks_throw_exception_for_failed_call.phpt" role="test"/>
         <file name="hooks_throw_exception_error_handler.phpt" role="test"/>
+        <file name="hooks_throw_exception_for_failed_call.phpt" role="test"/>
         <file name="ini_set.phpt" role="test"/>
         <file name="invalid_post_callback_signature.phpt" role="test"/>
         <file name="invalid_pre_callback_signature.phpt" role="test"/>
@@ -85,6 +85,7 @@
         <file name="post_hook_returns_cloned_modified_object.phpt" role="test"/>
         <file name="post_hook_throws_exception.phpt" role="test"/>
         <file name="post_hook_type_error.phpt" role="test"/>
+        <file name="post_hooks_after_die.phpt" role="test"/>
         <file name="reimplemented_interface.phpt" role="test"/>
         <file name="return_expanded_params.phpt" role="test"/>
         <file name="return_expanded_params_internal.phpt" role="test"/>
@@ -93,28 +94,33 @@
         <file name="return_reduced_params.phpt" role="test"/>
         <file name="static_method.phpt" role="test"/>
         <file name="unwind_exit.phpt" role="test"/>
+        <file name="unwind_exit_leak.phpt" role="test"/>
+        <file name="unwind_exit_pcntl_async_signal.phpt" role="test"/>
+        <file name="unwind_exit_pcntl_async_signal_leak.phpt" role="test"/>
         <dir name="mocks">
           <file name="SpanAttribute.php" role="test"/>
-          <file name="WithSpanHandlerDumpAttributes.php" role="test"/>
-          <file name="WithSpanHandler.php" role="test"/>
           <file name="WithSpan.php" role="test"/>
+          <file name="WithSpanHandler.php" role="test"/>
+          <file name="WithSpanHandlerDumpAttributes.php" role="test"/>
         </dir>
         <dir name="with_span">
           <file name="attribute_named_params_passed_to_pre_hook.phpt" role="test"/>
-          <file name="attribute_on_method.phpt" role="test"/>
-          <file name="attribute_on_interface.phpt" role="test"/>
-          <file name="attribute_params_skipped_if_hooked.phpt" role="test"/>
-          <file name="disable.phpt" role="test"/>
           <file name="attribute_on_function.phpt" role="test"/>
+          <file name="attribute_on_interface.phpt" role="test"/>
           <file name="attribute_on_interface_with_params.phpt" role="test"/>
+          <file name="attribute_on_method.phpt" role="test"/>
           <file name="attribute_params_passed_to_pre_hook.phpt" role="test"/>
+          <file name="attribute_params_skipped_if_hooked.phpt" role="test"/>
+          <file name="autoloaded_handler.phpt" role="test"/>
           <file name="customize_handlers.phpt" role="test"/>
+          <file name="disable.phpt" role="test"/>
+          <file name="handler_not_found.phpt" role="test"/>
           <file name="invalid_callback.phpt" role="test"/>
         </dir>
         <dir name="span_attribute">
           <file name="attribute_on_interface.phpt" role="test"/>
-          <file name="function_params_non_simple.phpt" role="test"/>
           <file name="function_params.phpt" role="test"/>
+          <file name="function_params_non_simple.phpt" role="test"/>
           <file name="method_params.phpt" role="test"/>
           <file name="span_attribute_attribute_priority.phpt" role="test"/>
         </dir>
@@ -483,6 +489,20 @@
       </stability>
       <license>Apache 2.0</license>
       <notes>See https://github.com/open-telemetry/opentelemetry-php-instrumentation/releases/tag/1.1.2</notes>
+    </release>
+    <release>
+      <date>2025-05-08</date>
+      <time>05:19:59</time>
+      <version>
+        <release>1.1.3</release>
+        <api>1.0</api>
+      </version>
+      <stability>
+        <release>stable</release>
+        <api>stable</api>
+      </stability>
+      <license>Apache 2.0</license>
+      <notes>See https://github.com/open-telemetry/opentelemetry-php-instrumentation/releases/tag/1.1.3</notes>
     </release>
   </changelog>
 </package>
